--- a/style.css
+++ b/style.css
@@ -9,9 +9,17 @@ body, html {
     width: 100%;
 }
 
+ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 .wrapper {
     min-height: 100%;
-    overflow: hidden;    
+   /* overflow: hidden; */   
+    position: relative;
+    font-family: 'Roboto', sans-serif;
 }
 /*
 .wrapper::after {
@@ -21,12 +29,12 @@ body, html {
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: rgba(224, 109, 64, 0.2);
+    background-color: rgba(64, 224, 208, 0.2);
 }
 */
 .header {
     height: 50px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(25, 74, 115, 0.8);
     position: fixed;
     top: 0;
     left: 0;
@@ -50,7 +58,7 @@ body, html {
 }
 
 .nav__item {
-    color: #f82137;
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
 }
@@ -60,10 +68,9 @@ body, html {
 }
 
 .main {
-    background-image: url(img/new_years.jpg);
+    background-image: url(img/rabstol_net_new_year_139.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -99,16 +106,28 @@ body, html {
 }
 
 .about__info {
-    background-color: rgba(115, 25, 40, 0.9);
+    background-color: rgba(25, 74, 115, 0.9);
     color: white;
     padding: 20px;
     border-radius: 20px;
     border: 5px solid white;
 }
 
+@keyframes run-text {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(100px);
+        color: rgb(221, 22, 39);
+    }
+    
+}
+
 .about__title {
     font-size: 50px;
     margin: 0;
+    animation: run-text 2s ease 0s infinite alternate;
 }
 
 .about__text {
@@ -118,7 +137,7 @@ body, html {
 .button {
     position: relative;
     z-index: 100;
-    background-color: #c8293e;
+    background-color: #d42726;
     padding: 15px;
     display: block;
     border-radius: 10px;
@@ -130,29 +149,113 @@ body, html {
 }
 
 .button:hover {
-    box-shadow: 0px 0px 13px 5px rgb(255, 149, 87);
+    box-shadow: 0px 0px 13px 5px rgb(255, 255, 255);
     
 }
 
+.compliment {
+    background-image: url(img/Noviy-God-2048x1152.jpg);
+    color: white;
+    background-size: cover;
+}
 
- .poem {
-      background-image: ;
-      background-size: cover;
-      padding: 50px;
-      text-align: center;
- }
+.compliment__content {
+    width: 50%;
+    padding: 30px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
- .poem__title {
-     margin-top: ;
- }
+@keyframes jumping-taigr {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(50px);
+    }
+}
 
-.poem__text {
+.compliment__img-wrap {
+    height: 40%;
+    position: relative;
+    animation: jumping-taigr 2s ease 0s infinite alternate;
+}
+
+@keyframes blink-text {
+0% {
+     transform: translate(0);
+color: white;
+    }
+    100% {
+        transform: translate(0);
+        color: red;
+    }
+
+}
+
+.compliment__title {
+animation: blink-text 0.5s infinite alternate ;
+}
+
+.compliment__img {
+    height: 100%;
+}
+
+.compliment__img-talk {
+    position: absolute;
+    top: 50%;
+    left: -15%;
+}
+
+.poem {
+    background-image: url(img/Christmas-Present-JAyJ-2048x1152-MM-100.jpg);
+    background-size: cover;
+    padding: 50px;    
+}
+
+.poem__title {
+    margin-top: 0;
+    text-align: center;
+}
+
+.poem__list {
+    display: flex;
+    justify-content: center;
+}
+
+.poem__item {
+    width: 300px;
     min-height: 580px;
-    border: ;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background-color: #f5f5dc;
+    padding: 20px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.poem__item:hover {
+    border-color: green;
+}
+
+.poem__img-wrap {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.poem__img {
+    height: 100%;
 }
 
 .msg {
-    background-image: url(img/rabstol_net_new_year_139.jpg);
+    background-image: url(img/noviy-god100.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -170,7 +273,7 @@ body, html {
 .form-msg {
     width: 600px;
     padding: 40px 40px 65px;
-    background-image: url(img/wadaw.jpg);
+    background-image: url(img/noviy-god.jpg);
     background-position: right center;
     background-size: cover;
     border-radius: 10px;
@@ -211,7 +314,7 @@ padding: 10px;
     
 }
 
-.form-msg__sumbit {
+.form-msg__submit {
     padding: 10px 20px;
     text-transform: uppercase;
     font-weight: bold;
@@ -219,8 +322,8 @@ padding: 10px;
     background-color: #f82137;
     border: none;
     cursor: pointer;
-    transition: all 1s ease 0s;
     border-radius: 7px;
+    transition: all 1s ease 0s;
 }
 
 .form-msg__sumbit:hover {
